Correction alignement vertical des tranches proches avant la validation de tranche

--- a/EdgeCreator/css/edgecreator_wizard.css
+++ b/EdgeCreator/css/edgecreator_wizard.css
@@ -384,4 +384,5 @@ input.couleur.selected {
 
 .tranches_pretes_magazine table tr td {
 	padding: 0px;
+	vertical-align: bottom;
 }
